Feat: Add detailed attendance tracking and statistics features
Introduced new classes and methods for enhanced attendance tracking, including filtering by date, section, and gender. Updated the AttendanceService and repository with logic to compute attendance stats, counts, rankings, and date-based filtering for both classes and schools. Refactored related DTOs and tests to integrate these features.