@@ -1,32 +1,38 @@
 package com.edusyspro.api.service.impl;
 
 import com.edusyspro.api.dto.AttendanceDTO;
+import com.edusyspro.api.dto.PlanningDTO;
 import com.edusyspro.api.dto.custom.*;
+import com.edusyspro.api.model.AcademicYear;
+import com.edusyspro.api.model.Individual;
 import com.edusyspro.api.model.enums.AttendanceStatus;
+import com.edusyspro.api.model.enums.Gender;
+import com.edusyspro.api.model.enums.Section;
 import com.edusyspro.api.repository.AttendanceRepository;
-import com.edusyspro.api.repository.StudentRepository;
+import com.edusyspro.api.service.CustomMethod;
+import com.edusyspro.api.service.interfaces.AcademicYearService;
 import com.edusyspro.api.service.interfaces.AttendanceService;
-import org.springframework.beans.factory.annotation.Autowired;
+import com.edusyspro.api.service.interfaces.PlanningService;
+import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.*;
 import org.springframework.stereotype.Service;
 
+import java.time.DayOfWeek;
 import java.time.LocalDate;
-import java.time.format.DateTimeFormatter;
+import java.time.temporal.ChronoUnit;
 import java.util.*;
+import java.util.concurrent.atomic.AtomicReference;
+import java.util.stream.Collector;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
+@RequiredArgsConstructor
 @Service
 public class AttendanceServiceImpl implements AttendanceService {
 
     private final AttendanceRepository attendanceRepository;
-    private final StudentRepository studentRepository;
-
-    @Autowired
-    public AttendanceServiceImpl(AttendanceRepository attendanceRepository, StudentRepository studentRepository) {
-        this.attendanceRepository = attendanceRepository;
-        this.studentRepository = studentRepository;
-    }
+    private final AcademicYearService academicYearService;
+    private final PlanningService planningService;
 
     @Override
     public Page<AttendanceDTO> getLastStudentAttendances(long studentId, Pageable pageable) {
@@ -52,26 +58,75 @@ public class AttendanceServiceImpl implements AttendanceService {
     }
 
     @Override
-    public List<AttendanceStatusCount> getStudentAttendanceCount(long studentId, String academicYearId) {
-        return attendanceRepository.findAttendanceStatusCountByStudent(studentId, UUID.fromString(academicYearId))
+    public AttendanceStatusCount getStudentAttendanceCount(long studentId, String academicYearId) {
+        Map<AttendanceStatus, Long> statusCount = attendanceRepository.findAttendanceStatusCountByStudent(studentId, UUID.fromString(academicYearId))
                 .stream()
-                .map(o -> new AttendanceStatusCount((AttendanceStatus) o[0], (long) o[1]))
+                .collect(Collectors.groupingBy(a -> (AttendanceStatus)a[0], Collectors.counting()));
+
+        return new AttendanceStatusCount(statusCount);
+    }
+
+    @Override
+    public List<AttendanceDTO> getAllClasseAttendancesPerDate(int classeId, String academicYearId, LocalDate date) {
+        return attendanceRepository.findAllClasseAttendancePerDate(
+                    classeId,
+                    UUID.fromString(academicYearId),
+                    getAttendanceDate(date)
+                )
+                .stream()
+                .map(AttendanceStudentIndividual::toDto)
                 .toList();
     }
 
     @Override
-    public List<AttendanceStatusCount> getClasseAttendanceCount(int classeId, String academicYearId) {
-        return attendanceRepository.findAttendanceStatusCountByClasse(classeId, UUID.fromString(academicYearId)).stream()
-                .map(o -> new AttendanceStatusCount((AttendanceStatus) o[0], (long) o[1]))
+    public AttendanceStatusCount getClasseAttendanceCount(int classeId, String academicYearId, LocalDate date) {
+        List<AttendanceInfo> attendanceInfos;
+        if (date != null) {
+            attendanceInfos = attendanceRepository.findAttendanceInfoByClasseAndDate(classeId, UUID.fromString(academicYearId), date);
+        }else {
+            attendanceInfos = attendanceRepository.findAttendanceInfoByClasse(classeId, UUID.fromString(academicYearId));
+        }
+        return getAttendanceStatusCount(attendanceInfos);
+    }
+
+    @Override
+    public AttendanceStatusCount getSchoolAttendanceCount(String academicYearId, LocalDate date) {
+        List<AttendanceInfo> attendanceInfos;
+        if (date != null) {
+            attendanceInfos = attendanceRepository.findAttendanceInfoByAcademicYearAndDate(UUID.fromString(academicYearId), date);
+        }else {
+            attendanceInfos = attendanceRepository.findAttendanceInfoByAcademicYear(UUID.fromString(academicYearId));
+        }
+        return getAttendanceStatusCount(attendanceInfos);
+    }
+
+    @Override
+    public List<AttendanceDTO> getAllSchoolAttendances(String schoolId, String academicYearId) {
+        return attendanceRepository.findAllSchoolAttendance(UUID.fromString(schoolId), UUID.fromString(academicYearId))
+                .stream()
+                .map(AttendanceEssential::populate)
                 .toList();
     }
 
     @Override
-    public List<AttendanceStatusCount> getSchoolAttendanceCount(String schoolId, String academicYearId) {
-        return attendanceRepository.findAttendanceStatusCountBySchool(UUID.fromString(schoolId), UUID.fromString(academicYearId))
-                .stream()
-                .map(o -> new AttendanceStatusCount((AttendanceStatus) o[0], (long) o[1]))
-                .toList();
+    public Page<AttendanceDTO> getAllSchoolPerDateAttendances(String schoolId, String academicYearId, LocalDate date, Pageable pageable) {
+        return attendanceRepository.findAllSchoolAttendancePerDate(
+                    UUID.fromString(schoolId),
+                    UUID.fromString(academicYearId),
+                    getAttendanceDate(date),
+                    pageable
+                )
+                .map(AttendanceStudentIndividual::toDto);
+    }
+
+    @Override
+    public Page<AttendanceDTO> getAllSchoolPerDateAttendances(String schoolId, String academicYearId, LocalDate date, String searchable, Pageable pageable) {
+        return attendanceRepository.findAllSchoolAttendancePerDate(
+                    UUID.fromString(schoolId),
+                    UUID.fromString(academicYearId),
+                    date, "%" + searchable + "%", pageable
+                )
+                .map(AttendanceStudentIndividual::toDto);
     }
 
     @Override
@@ -80,7 +135,8 @@ public class AttendanceServiceImpl implements AttendanceService {
         Page<Object[]> studentRanked = attendanceRepository.findAttendanceStatusRanking(
                 classeId, UUID.fromString(academicYearId), AttendanceStatus.PRESENT, pageable
         );
-        return getSummaryStatus(studentRanked);
+        int totalDays = getNumberOfClasseDays(classeId, academicYearId);
+        return getSummaryStatus(studentRanked, totalDays);
     }
 
     @Override
@@ -89,7 +145,24 @@ public class AttendanceServiceImpl implements AttendanceService {
         Page<Object[]> studentRanked = attendanceRepository.findAttendanceStatusRanking(
                 classeId, UUID.fromString(academicYearId), AttendanceStatus.ABSENT, pageable
         );
-        return getSummaryStatus(studentRanked);
+        int totalDays = getNumberOfClasseDays(classeId, academicYearId);
+        return getSummaryStatus(studentRanked, totalDays);
+    }
+
+    @Override
+    public List<IndividualAttendanceSummary> getStudentAtAttendanceRanking(String schoolId, String academicYearId, boolean isWorst) {
+        Pageable pageable = PageRequest.of(0, 5);
+        if (isWorst) {
+            Page<Object[]> worstStudents = attendanceRepository.findAttendanceStatusRanking(
+                    UUID.fromString(schoolId), UUID.fromString(academicYearId), AttendanceStatus.ABSENT, pageable
+            );
+            return getSummaryStatus(worstStudents, academicYearId);
+        }else {
+            Page<Object[]> goodStudents = attendanceRepository.findAttendanceStatusRanking(
+                    UUID.fromString(schoolId), UUID.fromString(academicYearId), AttendanceStatus.PRESENT, pageable
+            );
+            return getSummaryStatus(goodStudents, academicYearId);
+        }
     }
 
     @Override
@@ -100,7 +173,8 @@ public class AttendanceServiceImpl implements AttendanceService {
                 UUID.fromString(academicYearId)
         );
 
-        List<IndividualAttendanceSummary> summaries = getSummaryStatus(statuses);
+        int totalDays = getNumberOfClasseDays(classeId, academicYearId);
+        List<IndividualAttendanceSummary> summaries = getSummaryStatus(statuses, totalDays);
         return new PageImpl<>(summaries, individualIds.getPageable(), individualIds.getTotalElements());
     }
 
@@ -108,57 +182,229 @@ public class AttendanceServiceImpl implements AttendanceService {
     public List<IndividualAttendanceSummary> getStudentAttendanceStatus(int classeId, String academicYearId, String name) {
         List<Long> individualIds = attendanceRepository.findClasseAttendanceStatus(classeId, UUID.fromString(academicYearId), "%" +  name + "%");
         List<Object[]> statuses = attendanceRepository.findClasseAttendanceStatus(individualIds, UUID.fromString(academicYearId));
-        return getSummaryStatus(statuses);
+        int totalDays = getNumberOfClasseDays(classeId, academicYearId);
+        return getSummaryStatus(statuses, totalDays);
     }
 
     @Override
-    public List<AttendanceStatusStat> getClasseAttendanceStats(int classeId, String academicYearId) {
-        List<LocalDate> dates = attendanceRepository.findRecentAttendanceDate(classeId, UUID.fromString(academicYearId), PageRequest.of(0, 10));
-        Collections.reverse(dates);
-        System.out.println("DATE_GOT: " + Arrays.deepToString(dates.toArray(new LocalDate[0])));
-        List<Object[]> stats = attendanceRepository.findRecentClasseAttendanceStatsPerStatus(classeId, dates, UUID.fromString(academicYearId));
+    public List<AttendanceStatusStat> getClasseAttendanceStats(int classeId, String academicYearId, LocalDate startDate, LocalDate endDate) {
+        if (startDate != null && endDate != null) {
+            List<Object[]> stats = attendanceRepository.findClasseAttendanceStatsPerDates(classeId, startDate, endDate, UUID.fromString(academicYearId));
 
-        Map<LocalDate, Map<AttendanceStatus, Long>> dateStatusCount = stats.stream()
-                .collect(Collectors.groupingBy(row -> (LocalDate) row[1], Collectors.toMap(
-                        row -> (AttendanceStatus) row[0],
-                        row -> (Long) row[2],
-                        (count1, count2) -> count1,
-                        HashMap::new
-                )));
+            return getAttendanceStats(stats, startDate, endDate);
+        }else {
+            List<LocalDate> dates = attendanceRepository.findRecentAttendanceDate(classeId, UUID.fromString(academicYearId), PageRequest.of(0, 10));
 
-        return dates.stream()
-                .map(date -> {
-                    String formattedDate = date.format(DateTimeFormatter.ofPattern("dd/MM"));
-                    Map<AttendanceStatus, Long> statusCounts = dateStatusCount.getOrDefault(date, new HashMap<>());
-                    byte present = statusCounts.getOrDefault(AttendanceStatus.PRESENT, 0L).byteValue();
-                    byte absent = statusCounts.getOrDefault(AttendanceStatus.ABSENT, 0L).byteValue();
-                    byte late = statusCounts.getOrDefault(AttendanceStatus.LATE, 0L).byteValue();
-                    byte excused = statusCounts.getOrDefault(AttendanceStatus.EXCUSED, 0L).byteValue();
+            List<Object[]> stats = attendanceRepository.findRecentClasseAttendanceStatsPerStatus(classeId, dates, UUID.fromString(academicYearId));
+            return CustomMethod.getStats(stats, "dd/MM");
+        }
+    }
 
-                    return new AttendanceStatusStat(formattedDate, present, absent, late, excused);
+    @Override
+    public List<AttendanceStatusStat> getSchoolAttendanceStats(String schoolId, String academicYearId, LocalDate startDate, LocalDate endDate) {
+        if (startDate != null && endDate != null) {
+            List<Object[]> stats = attendanceRepository.findSchoolAttendanceStatsPerDates(
+                    UUID.fromString(schoolId), startDate, endDate, UUID.fromString(academicYearId)
+            );
+
+            return getAttendanceStats(stats, startDate, endDate);
+        }else {
+            List<LocalDate> dates = attendanceRepository.findRecentAttendanceDate(
+                    UUID.fromString(schoolId), UUID.fromString(academicYearId), PageRequest.of(0, 10)
+            );
+
+            List<Object[]> stats = attendanceRepository.findRecentSchoolAttendanceStatsPerStatus(
+                    UUID.fromString(schoolId), dates, UUID.fromString(academicYearId)
+            );
+            return CustomMethod.getStats(stats, "dd/MM");
+        }
+    }
+
+    @Override
+    public Integer getNumberOfClasseDays(int classeId, String academicYearId) {
+        AcademicYear academicYear = academicYearService.getAcademicYearById(academicYearId);
+        LocalDate currentDate = LocalDate.now();
+        LocalDate endDate = currentDate.isBefore(academicYear.getEndDate()) ? currentDate : academicYear.getEndDate();
+        List<PlanningDTO> plannings = planningService.findAllPlanningByClasseThroughoutTheAcademicYear(
+                classeId, academicYear.getStartDate(), endDate
+        );
+
+        Map<Integer, List<PlanningDTO>> bySemesters = plannings.stream()
+                .collect(Collectors.groupingBy(p -> p.getSemestre().getSemesterId()));
+
+        int grandTotalDays = 0;
+
+        for (Map.Entry<Integer, List<PlanningDTO>> entry : bySemesters.entrySet()) {
+            List<PlanningDTO> semestersPlannings = entry.getValue();
+
+            LocalDate minStart = semestersPlannings.stream()
+                    .map(PlanningDTO::getTermStartDate)
+                    .min(LocalDate::compareTo)
+                    .orElseThrow();
+
+            LocalDate maxEnd = semestersPlannings.stream()
+                    .map(PlanningDTO::getTermEndDate)
+                    .max(LocalDate::compareTo)
+                    .orElseThrow();
+
+            grandTotalDays = countDays(minStart, maxEnd);
+        }
+
+        return grandTotalDays;
+    }
+
+    private AttendanceStatusCount getAttendanceStatusCount(List<AttendanceInfo> attendanceInfos) {
+        //1. Overall Status count
+        Map<AttendanceStatus, Long> statusCount = attendanceInfos.stream()
+                .collect(Collectors.groupingBy(
+                        AttendanceInfo::getStatus,
+                        () -> new EnumMap<>(AttendanceStatus.class),
+                        Collectors.counting())
+                );
+
+        //2. Status by grade section
+        Map<Section, Map<AttendanceStatus, Long>> byGrade = attendanceInfos.stream()
+                .collect(Collectors.groupingBy(
+                        AttendanceInfo::getSection,
+                        LinkedHashMap::new,
+                        Collectors.groupingBy(
+                                AttendanceInfo::getStatus,
+                                () -> new EnumMap<>(AttendanceStatus.class),
+                                Collectors.counting())
+                ));
+
+        //3. Status by gender
+        Map<Gender, Map<AttendanceStatus, Long>> byGender = attendanceInfos.stream()
+                .collect(Collectors.groupingBy(
+                        AttendanceInfo::getGender,
+                        () -> new EnumMap<>(Gender.class),
+                        Collectors.groupingBy(
+                                AttendanceInfo::getStatus,
+                                () -> new EnumMap<>(AttendanceStatus.class),
+                                Collectors.counting())
+                ));
+
+        return new AttendanceStatusCount(statusCount, byGrade, byGender);
+    }
+
+    private Integer countDays(LocalDate start, LocalDate end) {
+        int count = 0;
+        LocalDate current = start;
+
+        // Loop until the day before the end date
+        while (current.isBefore(end)) {
+            if (current.getDayOfWeek() != DayOfWeek.SUNDAY) {
+                count++;
+            }
+            current = current.plusDays(1);
+        }
+
+        return count;
+    }
+
+    private List<IndividualAttendanceSummary> getSummaryStatus(Page<Object[]> objectsCount, int totalDays) {
+        return getIndividualAttendanceSummaries(objectsCount.stream(), totalDays);
+    }
+
+    private List<IndividualAttendanceSummary> getSummaryStatus(Page<Object[]> objectsCount, String academicYear) {
+        return getIndividualAttendanceSummaries(objectsCount.stream(), academicYear);
+    }
+
+    private List<IndividualAttendanceSummary> getSummaryStatus(List<Object[]> objectsCount, int totalDays) {
+        return getIndividualAttendanceSummaries(objectsCount.stream(), totalDays);
+    }
+
+    private List<IndividualAttendanceSummary> getIndividualAttendanceSummaries(Stream<Object[]> stream, String academicYear) {
+        class Acc {
+            String classeName;
+            final List<IndividualAttendanceCount> counts = new ArrayList<>();
+        }
+
+        Map<Individual, Acc> map = stream.collect(
+                Collectors.groupingBy(
+                        row -> ((IndividualBasic) row[0]).toEntity(),
+                        LinkedHashMap::new,
+                        Collector.of(
+                                Acc::new,
+                                (acc, row) -> {
+                                    acc.classeName = (String) row[4];
+                                    acc.counts.add(new IndividualAttendanceCount((AttendanceStatus) row[1], (Long) row[2], (Integer) row[3]));
+                                },
+                                (acc1, acc2) -> {
+                                    if (acc2.classeName != null) {
+                                        acc1.classeName = acc2.classeName;
+                                    }
+                                    acc1.counts.addAll(acc2.counts);
+                                    return acc1;
+                                }
+                        )
+                )
+        );
+
+        return map.entrySet()
+                .stream()
+                .map(entry -> {
+                    Individual ind = entry.getKey();
+                    Acc acc   = entry.getValue();
+                    Integer classeId = acc.counts.get(0).classeId();
+
+                    //Now call your helper to get the number of days for that class and academic year:
+                    int totalDays = getNumberOfClasseDays(classeId, academicYear);
+                    return new IndividualAttendanceSummary(ind, acc.counts, totalDays, acc.classeName);
                 })
                 .toList();
     }
 
-    private List<IndividualAttendanceSummary> getSummaryStatus(Page<Object[]> objectsCount) {
-        return getIndividualAttendanceSummaries(objectsCount.stream());
+    private List<IndividualAttendanceSummary> getIndividualAttendanceSummaries(Stream<Object[]> stream, int totalDays) {
+        AtomicReference<String> classeName = new AtomicReference<>("");
+        return mappingSummary(stream, classeName)
+                .entrySet().stream()
+                .map(entry -> new IndividualAttendanceSummary(
+                        entry.getKey(),
+                        entry.getValue(),
+                        totalDays,
+                        classeName.get())
+                )
+                .toList();
     }
 
-    private List<IndividualAttendanceSummary> getSummaryStatus(List<Object[]> objectsCount) {
-        return getIndividualAttendanceSummaries(objectsCount.stream());
-    }
-
-    private List<IndividualAttendanceSummary> getIndividualAttendanceSummaries(Stream<Object[]> stream) {
-        return stream.collect(Collectors.groupingBy(
+    private Map<Individual, List<IndividualAttendanceCount>> mappingSummary(Stream<Object[]> stream, AtomicReference<String> classeName) {
+        return stream.collect(
+                Collectors.groupingBy(
                         row -> {
-                            IndividualBasic individualBasic = (IndividualBasic) row[0];
-                            return individualBasic.toEntity();
+                            IndividualBasic ib = (IndividualBasic) row[0];
+                            return ib.toEntity();
                         },
                         LinkedHashMap::new,
-                        Collectors.mapping(row -> new IndividualAttendanceCount((AttendanceStatus) row[1], (Long) row[2]), Collectors.toList())
-                ))
-                .entrySet().stream()
-                .map(entry -> new IndividualAttendanceSummary(entry.getKey(), entry.getValue()))
-                .toList();
+                        Collectors.mapping(
+                                row -> {
+                                    classeName.set((String) row[4]);
+                                    return new IndividualAttendanceCount(
+                                            (AttendanceStatus) row[1],
+                                            (Long) row[2],
+                                            (Integer) row[3]       // this is the classeId
+                                    );
+                                },
+                                Collectors.toList()
+                        )
+                )
+        );
+    }
+
+    private List<AttendanceStatusStat> getAttendanceStats(List<Object[]> data, LocalDate startDate, LocalDate endDate) {
+        long weeks = ChronoUnit.WEEKS.between(startDate, endDate) + 1;
+        long months = ChronoUnit.MONTHS.between(startDate.withDayOfMonth(1), endDate.withDayOfMonth(1)) + 1;
+
+        if (weeks <= 10) {
+            return CustomMethod.getStats(data, "yyyy'-W");
+        }else if (months <= 10) {
+            return CustomMethod.getStats(data, "yyyy-MM");
+        }else {
+            return CustomMethod.getStats(data, "yyyy");
+        }
+    }
+
+    private LocalDate getAttendanceDate(LocalDate date) {
+        return date != null ? date : LocalDate.now();
     }
 }
